// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/ant1freeze/grpcshortener";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package shortener;

// The greeting service definition.
service UrlShortener {
  // Receive long url, reply short url
  rpc CreateUrl (UrlRequest) returns (UrlReply) {}
  // Receive shorturl, find it in DB, reply longurl from DB
  rpc GetUrl (UrlRequest) returns (UrlReply) {}
}

// The request message containing the user's name.
message UrlRequest {
  string urlreq = 1;
}

// The response message containing the greetings
message UrlReply {
  string urlrep = 1;
}
